--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,41 +1,49 @@
 {
   "app": {
-    "title": "تاسك-مزادي"
+    "title": "فينتورا"
   },
 
   "links": {
     "home": "الرئيسية",
-    "about": "عن الموقع"
+    "tasks": "المهام"
   },
 
-  "navbar": {
-    "add_new_product": "إضافة منتج جديد"
+  "form": {
+    "add": "إضافة",
+    "edit": "تعديل",
+    "save": "حفظ",
+    "export": "تصدير",
+    "reload": "إعادة التحميل",
+    "delete": "حذف",
+    "cancel": "إلغاء",
+    "confirm": "تأكيد",
+    "yes": "نعم",
+    "no": "لا",
+    "search": "بحث",
+    "reset": "محو البحث",
+    "filter": "تصفية",
+    "clear": "مسح",
+    "select": "اختيار",
+    "upload": "رفع",
+    "download": "تحميل",
+    "copy": "نسخ",
+    "paste": "لصق",
+    "cut": "قص",
+    "undo": "تراجع",
+    "redo": "إعادة",
+    "next": "التالي",
+    "prev": "السابق",
+    "finish": "إنهاء",
+    "close": "إغلاق",
+    "open": "فتح",
+    "confirm_delete": "هل أنت متأكد من حذف هذا العنصر؟"
   },
 
-  "user_info": {
-    "following": "يتابع",
-    "followers": "متابعون",
-    "rate": "تقييم",
-
-    "follow": "تابع"
-  },
-
-  "qr": {
-    "title": "رمز الاستجابة السريعة",
-    "para": "قم بتنزيل رمز الاستجابة السريعة أو مشاركته مع أصدقائك.",
-    "follow_us": "تابعنا على مزادي"
-  },
-
-  "products": {
-    "title": "المنتجات"
-  },
-
-  "product": {
-    "starting_price": "السعر المبدئي",
-    "lot_starts_in": "يبدأ المزاد في",
-    "days": "أيام",
-    "hours": "ساعات",
-    "minutes": "دقائق"
+  "CRUDS": {
+    "tasks": {
+      "title": "المهام",
+      "single": "مهمة"
+    }
   },
 
   "pages": {
@@ -60,6 +68,44 @@
         "desc": "حدث خطأ غير متوقع. يرجى المحاولة مرة أخرى في وقت لاحق",
         "btn": "حاول لاحقاً"
       }
+    },
+    "tasks": {
+      "title": "المهام"
+    }
+  },
+
+  "validation": {
+    "required": "مطلوب",
+    "email": "البريد الإلكتروني غير صحيح"
+  },
+
+  "labels": {
+    "upload": "رفع",
+    "choose": "اختيار",
+    "enter": "إدخال",
+    "search_with": " البحث بـ",
+    "name": "الاسم",
+    "description": "الوصف",
+    "status": "الحالة",
+    "created_at": "تاريخ الإنشاء",
+    "updated_at": "تاريخ التحديث",
+    "image": "الصورة",
+    "is_active": "نشط",
+    "lesson": "الدرس",
+    "tickets": "التذاكر",
+    "gender": "الجنس",
+    "male": "ذكر",
+    "female": "أنثى"
+  },
+
+  "table": {
+    "actions": "الإجراءات",
+    "per_page": "عدد العناصر",
+    "num_of_rows": "عرض {from} إلى {to} من {total} عنصر",
+    "no_data": {
+      "title": "لا توجد بيانات",
+      "desc": "لا توجد بيانات لعرضها",
+      "btn": "إعادة التحميل"
     }
   }
 }
